Add missing annotations, type variables and some minor cleanup.
git-svn-id: https://svn.apache.org/repos/asf/incubator/harmony/enhanced/classlib/trunk@466910 13f79535-47bb-0310-9956-ffa450edef68